[gd_scene load_steps=8 format=3 uid="uid://dj30nbe7n8uur"]

[ext_resource type="Script" path="res://Scene/Trade/Script/BackPackUI/pack_item_discard.gd" id="1_wwrje"]
[ext_resource type="Texture2D" uid="uid://dakrf766yuka" path="res://Art/2D/BaseSceneUI/BagUI/BagUI_C.png" id="2_klj7i"]
[ext_resource type="Texture2D" uid="uid://cg1an8a2b5v87" path="res://Art/2D/BaseSceneUI/BaseUI/UI_ButtonC.png" id="3_f3tgk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7tru"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1nf8s"]
color = Color(1, 1, 1, 0.8)
thickness = 7
vertical = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ma61y"]
texture = ExtResource("3_f3tgk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bcaw8"]
texture = ExtResource("3_f3tgk")

[node name="PackItemDiscard" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_wwrje")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
texture = ExtResource("2_klj7i")
expand_mode = 3

[node name="GoodsName" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -53.0568
offset_top = 25.0
offset_right = 52.9432
offset_bottom = 56.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "物品名称"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoodsNumber" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0568
offset_top = -64.0
offset_right = 29.9432
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "物品数量"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberDown" type="Button" parent="TextureRect"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.557
anchor_right = 0.5
anchor_bottom = 0.557
offset_left = -341.057
offset_top = -43.95
offset_right = -296.057
offset_bottom = 0.0499878
size_flags_horizontal = 3
flat = true

[node name="NumberScrollBar" type="HScrollBar" parent="TextureRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 10)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.057
offset_top = -21.0
offset_right = 258.943
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/scroll = SubResource("StyleBoxEmpty_d7tru")
theme_override_styles/grabber = SubResource("StyleBoxLine_1nf8s")
min_value = 1.0
step = 1.0
value = 1.0

[node name="NumberUp" type="Button" parent="TextureRect"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.557
anchor_right = 0.5
anchor_bottom = 0.557
offset_left = 288.943
offset_top = -43.95
offset_right = 331.943
offset_bottom = 0.0499878
size_flags_horizontal = 3
flat = true

[node name="NumberHeavy" type="Label" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0568
offset_top = 49.0
offset_right = 29.9432
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "丢弃重量"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DetailsCancel" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = -90.0
offset_right = -170.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_ma61y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ma61y")
theme_override_styles/normal = SubResource("StyleBoxTexture_ma61y")
text = "取消"

[node name="DicardButton" type="Button" parent="TextureRect"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 153.0
offset_top = -90.0
offset_right = 253.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_bcaw8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bcaw8")
theme_override_styles/normal = SubResource("StyleBoxTexture_bcaw8")
text = "丢弃"

[connection signal="pressed" from="TextureRect/NumberDown" to="." method="_on_number_down_pressed"]
[connection signal="value_changed" from="TextureRect/NumberScrollBar" to="." method="_on_number_scroll_bar_value_changed"]
[connection signal="pressed" from="TextureRect/NumberUp" to="." method="_on_number_up_pressed"]
[connection signal="pressed" from="TextureRect/DetailsCancel" to="." method="_on_details_cancel_pressed"]
[connection signal="pressed" from="TextureRect/DicardButton" to="." method="_on_dicard_button_pressed"]
